[package]
name = "bkapi"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
envconfig = "0.10"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-unwrap = "0.9"
tracing-opentelemetry = "0.14"

opentelemetry = { version = "0.15", features = ["rt-async-std"] }
opentelemetry-semantic-conventions = "0.7.0"
opentelemetry-jaeger = "0.14"

lazy_static = "1"
prometheus = { version = "0.12", features = ["process"] }

bk-tree = "0.4.0"
hamming = "0.1"

futures = "0.3"
async-std = { version = "1", features = ["attributes"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tide = "0.16"
tide-tracing = "0.0.11"

[dependencies.sqlx]
version = "0.5"
features = ["runtime-async-std-rustls", "postgres"]
