[package]
name = "bkapi-client"
version = "0.3.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[features]
nats = ["async-nats"]

[dependencies]
async-nats = { version = "0.35.1", optional = true }
futures = "0.3"
opentelemetry = "0.23.0"
opentelemetry-http = "0.12.0"
reqwest = { version = "0.11.0", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-opentelemetry = "0.24.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
