[package]
name = "bkapi"
version = "0.2.1"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[dependencies]
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-unwrap = "0.10"
tracing-opentelemetry = "0.18"

opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }

lazy_static = "1"
prometheus = { version = "0.13", features = ["process"] }

bk-tree = "0.4.0"
hamming = "0.1"

futures = "0.3"
tokio = { version = "1", features = ["sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix-web = "4"
actix-http = "3"
actix-service = "2"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_18"] }

async-nats = "0.27"

foxlib = { git = "https://github.com/Syfaro/foxlib.git" }

[dependencies.sqlx]
version = "0.6"
features = ["runtime-actix-rustls", "postgres"]
