[package]
name = "bkapi"
version = "0.3.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[dependencies]
actix-http = "3"
actix-service = "2"
actix-web = "4"
async-nats = { version = "0.34", features = ["service"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bk-tree = { version = "0.5.0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
flate2 = "1"
futures = "0.3"
hamming = "0.1"
lazy_static = "1"
opentelemetry = "0.23"
prometheus = { version = "0.13", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_23"] }
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-unwrap = "1.0.1"

foxlib = { git = "https://github.com/Syfaro/foxlib.git" }

[dependencies.sqlx]
version = "0.6"
features = ["runtime-actix-rustls", "postgres"]
